copied modifications from my installation

--- a/SDK/Samples/CustomExporter/Custom2DExporter/CS/Custom2DExporter.csproj
+++ b/SDK/Samples/CustomExporter/Custom2DExporter/CS/Custom2DExporter.csproj
@@ -23,7 +23,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DocumentationFile>bin\Debug\Custom2DExporter.XML</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
