--- a/SDK/Samples/Massing/PointCurveCreation/CS/PointCurveCreation.csproj
+++ b/SDK/Samples/Massing/PointCurveCreation/CS/PointCurveCreation.csproj
@@ -57,7 +57,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.Office.Interop.Excel, Version=10.0.4504.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\ArchSample\VB.NET\Microsoft.Office.Interop.Excel.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\..\Source\Tools\RvtMgdDbg\Third Party\Office XP Assemblies\Microsoft.Office.Interop.Excel.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
