compiled Revit 2020.1 SDK and reduced 5 errors 38 warnings to zero errors four warnings

--- a/SDK/Samples/GeometryAPI/ProximityDetection_WallJoinControl/CS/ProximityDetection_WallJoinControl.csproj
+++ b/SDK/Samples/GeometryAPI/ProximityDetection_WallJoinControl/CS/ProximityDetection_WallJoinControl.csproj
@@ -44,7 +44,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <DocumentationFile>bin\Debug\ProximityDetection_WallJoinControl.xml</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
     <CodeAnalysisRuleSet>ProximityDetection_WallJoinControl.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
