switched off RvtSample external command class name testing

--- a/SDK/Samples/PointCloudEngine/CS/PointCloudEngine.csproj
+++ b/SDK/Samples/PointCloudEngine/CS/PointCloudEngine.csproj
@@ -41,7 +41,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>PointCloudEngine.XML</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
