--- a/SDK/Samples/VSProps/SDKSamples.targets
+++ b/SDK/Samples/VSProps/SDKSamples.targets
@@ -32,16 +32,16 @@
   <ItemGroup>
     <Reference Include="RevitAPI">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(SolutionDir)..\..\..\..\$(ConfigurationName)$(PlatformName)\RevitAPI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>$(SolutionDir)..\..\..\..\$(ConfigurationName)$(PlatformName)\RevitAPIUI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAddInUtility">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(SolutionDir)..\..\..\..\$(ConfigurationName)$(PlatformName)\RevitAddInUtility.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAddInUtility.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
