--- a/SDK/REX SDK/Samples/ContentGeneratorWPF/ContentGeneratorWPF/ContentGeneratorWPF.csproj
+++ b/SDK/REX SDK/Samples/ContentGeneratorWPF/ContentGeneratorWPF/ContentGeneratorWPF.csproj
@@ -78,11 +78,11 @@
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
     <Reference Include="RevitAPI">
-      <HintPath>q:\Ref\RevitAPI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>q:\Ref\RevitAPIUI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="REX.API">
