--- a/SDK/Macro Samples/GetTimeElapsed_VBNet/Source/GetTimeElapsed_VBNet/GetTimeElapsed_VBNet.vbproj
+++ b/SDK/Macro Samples/GetTimeElapsed_VBNet/Source/GetTimeElapsed_VBNet/GetTimeElapsed_VBNet.vbproj
@@ -61,7 +61,7 @@
   <ItemGroup>
     <Reference Include="RevitAPIUI, Version=2011.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\RevitAPIUI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -76,7 +76,7 @@
     </Reference>
     <Reference Include="RevitAPI">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\RevitAPI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
