--- a/SDK/Macro Samples/Rooms/Source/Rooms/Rooms.csproj
+++ b/SDK/Macro Samples/Rooms/Source/Rooms/Rooms.csproj
@@ -71,11 +71,11 @@
   <!-- This sections specifies references for the project. -->
   <ItemGroup>
     <Reference Include="RevitAPI">
-      <HintPath>..\..\..\..\..\RevitAPI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>..\..\..\..\..\RevitAPIUI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
