--- a/SDK/Structural Analysis SDK/Examples/SectionPropertiesExplorer/SectionPropertiesExplorer.csproj
+++ b/SDK/Structural Analysis SDK/Examples/SectionPropertiesExplorer/SectionPropertiesExplorer.csproj
@@ -41,11 +41,11 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="RevitAPI">
-      <HintPath>..\..\..\..\..\References\Revit\RevitAPI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>..\..\..\..\..\References\Revit\RevitAPIUI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
