fixed HintPath in SDKSamples.Steel.targets

--- a/SDK/Samples/VSProps/SDKSamples.Steel.targets
+++ b/SDK/Samples/VSProps/SDKSamples.Steel.targets
@@ -31,19 +31,19 @@
        This must come after the import of the common targets -->
   <ItemGroup>
     <Reference Include="ASObjectsMgd">
-      <HintPath>$(SolutionDir)..\..\..\..\$(ConfigurationName)$(PlatformName)\Addins\SteelConnections\ASObjectsMgd.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\AddIns\SteelConnections\ASObjectsMgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ASGeometryMgd">
-      <HintPath>$(SolutionDir)..\..\..\..\$(ConfigurationName)$(PlatformName)\Addins\SteelConnections\ASGeometryMgd.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\AddIns\SteelConnections\ASGeometryMgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ASCADLinkMgd">
-      <HintPath>$(SolutionDir)..\..\..\..\$(ConfigurationName)$(PlatformName)\Addins\SteelConnections\ASCADLinkMgd.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\AddIns\SteelConnections\ASCADLinkMgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="SteelConnectionsDB">
-      <HintPath>$(SolutionDir)..\..\..\..\$(ConfigurationName)$(PlatformName)\Addins\SteelConnections\Autodesk.SteelConnectionsDB.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\AddIns\SteelConnections\Autodesk.SteelConnectionsDB.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
