RvtSamples now also loads The Building Coder samples

--- a/SDK/Samples/RvtSamples/CS/RvtSamples.csproj
+++ b/SDK/Samples/RvtSamples/CS/RvtSamples.csproj
@@ -86,7 +86,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="RvtSamples.addin" />
+    <None Include="RvtSamples.addin">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icons\Analysis.ico">
