--- a/SDK/Macro Samples/GetTimeElapsed_CSharp/Source/GetTimeElapsed_CSharp/GetTimeElapsed_CSharp.csproj
+++ b/SDK/Macro Samples/GetTimeElapsed_CSharp/Source/GetTimeElapsed_CSharp/GetTimeElapsed_CSharp.csproj
@@ -57,7 +57,7 @@
   <ItemGroup>
     <Reference Include="RevitAPIUI, Version=2011.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPIUI.dll</HintPath>
+      <HintPath>..\..\..\..\..\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -69,7 +69,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="RevitAPI">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPI.dll</HintPath>
+      <HintPath>..\..\..\..\..\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
