--- a/SDK/Samples/RvtSamples/CS/RvtSamples.csproj
+++ b/SDK/Samples/RvtSamples/CS/RvtSamples.csproj
@@ -85,11 +85,7 @@
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="RvtSamples.addin">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Icons\Analysis.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
