--- a/SDK/Structural Analysis SDK/Examples/Concrete/CodeCheckingConcreteExample/CodeCheckingConcreteExample.csproj
+++ b/SDK/Structural Analysis SDK/Examples/Concrete/CodeCheckingConcreteExample/CodeCheckingConcreteExample.csproj
@@ -91,11 +91,11 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPI">
-      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPI.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\References\Revit\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPIUI.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\References\Revit\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
