--- a/SDK/REX SDK/Samples/DRevitFreezeDrawing/DRevitFreezeDrawing/DRevitFreezeDrawing.csproj
+++ b/SDK/REX SDK/Samples/DRevitFreezeDrawing/DRevitFreezeDrawing/DRevitFreezeDrawing.csproj
@@ -71,11 +71,11 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPI">
-      <HintPath>C:\program files\Autodesk\Revit 2018\RevitAPI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>C:\program files\Autodesk\Revit 2018\RevitAPIUI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="REX.Controls">
