fixed mismatch warning, added references to civil alignments and steel connections

--- a/SDK/Macro Samples/GetTimeElapsed_VBNet/Source/GetTimeElapsed_VBNet/GetTimeElapsed_VBNet.vbproj
+++ b/SDK/Macro Samples/GetTimeElapsed_VBNet/Source/GetTimeElapsed_VBNet/GetTimeElapsed_VBNet.vbproj
@@ -1,4 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
+  <PropertyGroup>
+    <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+      None
+    </ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+  </PropertyGroup>
+
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <!-- This section defines project-level properties.
        
