--- a/SDK/Samples/SampleCommandsSteelElements/CS/SampleCommandsSteelElements.csproj
+++ b/SDK/Samples/SampleCommandsSteelElements/CS/SampleCommandsSteelElements.csproj
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
+    <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+      None
+    </ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+  </PropertyGroup>
+  <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
@@ -43,6 +48,22 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ASCADLinkMgd">
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\AddIns\SteelConnections\ASCADLinkMgd.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="ASGeometryMgd">
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\AddIns\SteelConnections\ASGeometryMgd.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="ASObjectsMgd">
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\AddIns\SteelConnections\ASObjectsMgd.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Autodesk.SteelConnectionsDB">
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\AddIns\SteelConnections\Autodesk.SteelConnectionsDB.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
