--- a/SDK/Macro Samples/GetTimeElapsed_CSharp/Source/GetTimeElapsed_CSharp/GetTimeElapsed_CSharp.csproj
+++ b/SDK/Macro Samples/GetTimeElapsed_CSharp/Source/GetTimeElapsed_CSharp/GetTimeElapsed_CSharp.csproj
@@ -1,4 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
+  <PropertyGroup>
+    <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+      None
+    </ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+  </PropertyGroup>
+
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <!-- This section defines project-level properties.
        
