--- a/SDK/Samples/ContextualAnalyticalModel/CS/ContextualAnalyticalModel.csproj
+++ b/SDK/Samples/ContextualAnalyticalModel/CS/ContextualAnalyticalModel.csproj
@@ -62,16 +62,12 @@
     <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RevitAddInUtility">
-      <HintPath>..\..\..\..\..\..\Debugx64\RevitAddInUtility.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="RevitAPI">
-      <HintPath>..\..\..\..\..\..\Debugx64\RevitAPI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2023\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>..\..\..\..\..\..\Debugx64\RevitAPIUI.dll</HintPath>
+      <HintPath>C:\Program Files\Autodesk\Revit 2023\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
