--- a/SDK/Samples/ContextualAnalyticalModel/CS/ContextualAnalyticalModel.csproj
+++ b/SDK/Samples/ContextualAnalyticalModel/CS/ContextualAnalyticalModel.csproj
@@ -1,11 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <PropertyGroup>
-    <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
-      None
-    </ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
-  </PropertyGroup>
-
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -68,12 +62,16 @@
     <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="RevitAddInUtility">
+      <HintPath>..\..\..\..\..\..\Debugx64\RevitAddInUtility.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="RevitAPI">
-      <HintPath>C:\Program Files\Autodesk\Revit 2023\RevitAPI.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Debugx64\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>C:\Program Files\Autodesk\Revit 2023\RevitAPIUI.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Debugx64\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -89,6 +87,7 @@
   <ItemGroup>
     <Compile Include="AddAssociation.cs" />
     <Compile Include="AnalyticalNodeConnStatus.cs" />
+    <Compile Include="CreateAnalyticalCurvedPanel.cs" />
     <Compile Include="RemoveAssociation.cs" />
     <Compile Include="CreateAnalytcalPanel.cs" />
     <Compile Include="CreateAnalyticalMember.cs" />
