successful compilation of 200 projects

--- a/SDK/Samples/VSProps/SDKSamples.Steel.targets
+++ b/SDK/Samples/VSProps/SDKSamples.Steel.targets
@@ -26,23 +26,23 @@
   <Import Project="$(SolutionDir)VSProps\SDKSamples.targets" />
   <ItemGroup>
     <Reference Include="ASObjectsMgd">
-      <HintPath>$(SolutionDir)..\..\..\..\$(ConfigurationName)$(PlatformName)\Addins\SteelConnections\ASObjectsMgd.dll</HintPath>
+      <HintPath>C:/Program Files/Autodesk/Revit 2024/Addins\SteelConnections\ASObjectsMgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ASGeometryMgd">
-      <HintPath>$(SolutionDir)..\..\..\..\$(ConfigurationName)$(PlatformName)\Addins\SteelConnections\ASGeometryMgd.dll</HintPath>
+      <HintPath>C:/Program Files/Autodesk/Revit 2024/Addins\SteelConnections\ASGeometryMgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ASCADLinkMgd">
-      <HintPath>$(SolutionDir)..\..\..\..\$(ConfigurationName)$(PlatformName)\Addins\SteelConnections\ASCADLinkMgd.dll</HintPath>
+      <HintPath>C:/Program Files/Autodesk/Revit 2024/Addins\SteelConnections\ASCADLinkMgd.dll</HintPath>
       <Private>False</Private>
     </Reference>
 	<Reference Include="DotNetRoots">
-      <HintPath>$(SolutionDir)..\..\..\..\$(ConfigurationName)$(PlatformName)\Addins\SteelConnections\DotNetRoots.dll</HintPath>
+      <HintPath>C:/Program Files/Autodesk/Revit 2024/Addins\SteelConnections\DotNetRoots.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="SteelConnectionsDB">
-      <HintPath>$(SolutionDir)..\..\..\..\$(ConfigurationName)$(PlatformName)\Addins\SteelConnections\Autodesk.SteelConnectionsDB.dll</HintPath>
+      <HintPath>C:/Program Files/Autodesk/Revit 2024/Addins\SteelConnections\Autodesk.SteelConnectionsDB.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
