--- a/SDK/Samples/VSProps/SDKSamples.targets
+++ b/SDK/Samples/VSProps/SDKSamples.targets
@@ -30,16 +30,16 @@
   <ItemGroup>
     <Reference Include="RevitAPI">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(SolutionDir)..\..\..\..\$(ConfigurationName)$(PlatformName)\RevitAPI.dll</HintPath>
+      <HintPath>C:/Program Files/Autodesk/Revit 2024/RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>$(SolutionDir)..\..\..\..\$(ConfigurationName)$(PlatformName)\RevitAPIUI.dll</HintPath>
+      <HintPath>C:/Program Files/Autodesk/Revit 2024/RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAddInUtility">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(SolutionDir)..\..\..\..\$(ConfigurationName)$(PlatformName)\RevitAddInUtility.dll</HintPath>
+      <HintPath>C:/Program Files/Autodesk/Revit 2024/RevitAddInUtility.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
