set CopyToOutputDirectory to PreserveNewest in CloudAPISample DockableDialogs FreeFormElement GetSetDefaultTypes InCanvasControlAPI and SinePlotter

--- a/SDK/Samples/DockableDialogs/CS/DockableDialogs.csproj
+++ b/SDK/Samples/DockableDialogs/CS/DockableDialogs.csproj
@@ -41,13 +41,13 @@ if exist %25FILEFORSAMPLEREG%25 py -3 %25FILEFORSAMPLEREG%25  "$(ProjectPath)" "
   </PropertyGroup>
   <ItemGroup>
     <None Update="Resources\Hide.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Register.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Resources\Show.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 </Project>
