--- a/SDK/Samples/GetSetDefaultTypes/CS/GetSetDefaultTypes.csproj
+++ b/SDK/Samples/GetSetDefaultTypes/CS/GetSetDefaultTypes.csproj
@@ -48,10 +48,10 @@ if exist %25FILEFORSAMPLEREG%25 py -3 %25FILEFORSAMPLEREG%25  "$(ProjectPath)" "
   </PropertyGroup>
   <ItemGroup>
     <None Update="GetSetDefaultTypes.addin">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Resources\type.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 </Project>
