--- a/SDK/Samples/SinePlotter/CS/SinePlotter.csproj
+++ b/SDK/Samples/SinePlotter/CS/SinePlotter.csproj
@@ -23,7 +23,7 @@ if exist %25FILEFORSAMPLEREG%25 py -3 %25FILEFORSAMPLEREG%25  "$(ProjectPath)" "
   </PropertyGroup>
   <ItemGroup>
     <Content Include="Resources\Start.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 </Project>
