--- a/SDK/Samples/CloudAPISample/CS/CloudAPISample.csproj
+++ b/SDK/Samples/CloudAPISample/CS/CloudAPISample.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\icon.ico">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
