--- a/SDK/Samples/RvtSamples/CS/RvtSamples.csproj
+++ b/SDK/Samples/RvtSamples/CS/RvtSamples.csproj
@@ -61,10 +61,7 @@
     </Content>
   </ItemGroup>
   <Import Project="$(SolutionDir)VSProps\SDKSamples.Sdk.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>set FILEFORSAMPLEREG="$(SolutionDir)..\..\..\..\Regression\API\SDKSamples\UpdateSampleDllForRegression.py"
-if exist %25FILEFORSAMPLEREG%25 py -3 %25FILEFORSAMPLEREG%25  "$(ProjectPath)" "$(TargetPath)" "$(SolutionDir)"</PostBuildEvent>
-  </PropertyGroup>
+  <PropertyGroup />
   <PropertyGroup>
     <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
   </PropertyGroup>
